# agx-segway

./: README.md
segway/: CMakeLists.txt  package.xml
segway/bringup/config/: controllers.yaml  display.rviz
segway/bringup/launch/: segway_agx.launch.py  segway_scene.agx  visualize.launch.py
segway/scripts/: segway.py  segway_scene.agx.py
segway/urdf/: segway.agx_ros2.xacro  segway.model.xacro  segway.urdf.xacro  segway_static.urdf
